# bitwhip

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs
.cargo/: config.toml
_scripts/: common.just  linux.just  windows.just
src/: client.rs  encoder.rs  main.rs  player.rs  whip.rs
src/source/: dxdup.rs  mod.rs  rhino.rs
