[package]
name = "bitwhip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
async-std = { version = "1.12.0", features = [
    "attributes",
    "unstable",
    "tokio1",
] }
bytes = "1.5.0"
clap = { version = "4.5.4", features = ["derive", "color"] }
simplelog = { version = "0.12.2" }
ffmpeg-next = "7.0.0"
futures = "0.3.29"
log = "0.4.21"
str0m = "0.5.1"
jwt = "0.16.0"
local-ip-address = "0.6.1"
rand = "0.8.5"
reqwest = "0.11.23"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
url = "2.5.0"
axum = "0.7.5"
sdl2 = { version = "0.37.0", features = ["bundled"] }
ffmpeg-sys-next = "7.0.0"
